# Home_work_041224

./: .gitignore  pyproject.toml
src/: string_selection.py
test/: test_code.py
tests/: test_calc.py
