[tool.poetry]
name = "home-work-041224"
version = "0.1.0"
description = ""
authors = ["Alex-Stas <alexander.stashchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# максимальная длина строки
line_length = 119
force_single_line = 'True'
